kubernetes/external/homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-external
  namespace: external
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant-external
  namespace: external
  labels:
    kubernetes.io/service-name: homeassistant-external
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "10.10.1.3"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-external
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: hass.saturn.ong
    external-dns.alpha.kubernetes.io/target: direct.saturn.ong
spec:
  tls:
    - secretName: hass.saturn.ong-tls
  rules:
    - host: "hass.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: homeassistant-external
                port:
                  number: 8123
