kubernetes/external/octoprint.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-external
  namespace: external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: octoprint-external
  namespace: external
  labels:
    kubernetes.io/service-name: octoprint-external
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.200.254"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint-external
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: OctoPrint
    gethomepage.dev/group: Home
    gethomepage.dev/icon: octoprint
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: octoprint.saturn.ci
    external-dns.alpha.kubernetes.io/target: direct.saturn.ci
spec:
  tls:
    - secretName: octoprint.saturn.ci
      hosts:
        - octoprint.saturn.ci
  rules:
    - host: "octoprint.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: octoprint-external
                port:
                  number: 80
