kubernetes/external/truenas.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-external
  namespace: external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas-external
  namespace: external
  labels:
    kubernetes.io/service-name: truenas-external
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.2.2"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-external
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    hajimari.io/enable: "true"
    hajimari.io/appName: NAS
    hajimari.io/group: Storage
    hajimari.io/icon: mdi:nas
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: truenas.saturn.ong
    external-dns.alpha.kubernetes.io/target: direct.saturn.ong
spec:
  tls:
    - secretName: truenas.saturn.ong-tls
  rules:
    - host: "truenas.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: truenas-external
                port:
                  number: 80
